5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1709_3039.log
== TEST (2019-05-02 10:22:10) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))

if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:22:34) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
print(a,b)
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
-- OUTPUT:
-81.89038554400581 171.89038554400582
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:25:59) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:04) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:27:35) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:26) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
if 
elif ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
-- ERROR:
File "XXXX", line 5
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:31) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
elif ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
-- ERROR:
File "XXXX", line 5
    elif ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:36) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
a= degrees(asin(x))
b= degrees(acos(x))
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(a,2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(b,2))
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:52) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(degrees(asin(x)),2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(degrees(acos(x)),2))
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:58) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(degrees(asin(x)),2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(degrees(acos(x)),2))
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:30:19) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(degrees(asin(x)),2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(degrees(acos(x)),2))
else:
	print("entrada invalida")
-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:30:26) 
-- CODE:
x= float(input("insira o valor de x: "))
from math import*
if ((x>=-1)and(x<-(1/2))) or ((x>1/2)and(x<=1)):
	print(round(degrees(asin(x)),2))
elif (x>=-(1/2)and(x<=1/2)):
	print(round(degrees(acos(x)),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.132727
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
